@@ -67,7 +67,7 @@
 				<dependency>
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>6.2.0.Final</version> <!-- Use the latest stable version -->
+			<version>8.0.1.Final</version> <!-- Use the latest stable version -->
 		</dependency>
 
 		<dependency>
@@ -81,6 +81,7 @@
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
+			<version>8.0.33</version> <!-- Use a stable version -->
 			<scope>runtime</scope>
 		</dependency>
 <!--		<dependency>-->
@@ -123,15 +124,7 @@
 
 	<build>
 		<plugins>
-<!--			<plugin>-->
-<!--				<groupId>org.apache.maven.plugins</groupId>-->
-<!--				<artifactId>maven-compiler-plugin</artifactId>-->
-<!--				<version>3.8.1</version>-->
-<!--				<configuration>-->
-<!--					<release>23</release>-->
-<!--					<compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
-<!--				</configuration>-->
-<!--			</plugin>-->
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -143,6 +136,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
+						<source>21</source>
+						<target>21</target>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
@@ -151,32 +146,11 @@
 					</annotationProcessorPaths>
 					<source>21</source>
 					<target>21</target>
-<!--					<compilerArgs>&#45;&#45;enable-preview</compilerArgs>        ***************************this is wht i commented at last*******************-->
+                    <compilerArgs>--enable-preview</compilerArgs>
+                    <!--					<compilerArgs>&#45;&#45;enable-preview</compilerArgs>        ***************************this is wht i commented at last*******************-->
 				</configuration>
 			</plugin>
-
-<!--			<plugin>-->
-<!--				<groupId>org.springframework.boot</groupId>-->
-<!--				<artifactId>spring-boot-maven-plugin</artifactId>-->
-<!--				<configuration>-->
-<!--					<excludes>-->
-<!--						<exclude>-->
-<!--							<groupId>org.projectlombok</groupId>-->
-<!--							<artifactId>lombok</artifactId>-->
-<!--						</exclude>-->
-<!--					</excludes>-->
-<!--				</configuration>-->
-<!--			</plugin>-->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.10.1</version> <!-- Use the latest stable version -->
-					<configuration>
-						<source>21</source>
-						<target>21</target>
-					</configuration>
-				</plugin>
-		</plugins>
+					</plugins>
 
 
 
